# zellij_monitor

./: Cargo.toml  README.md  install.sh  zellij.kdl
.github/workflows/: rust.yml
src/: config.rs  lib.rs  render.rs
src/metrics/: cpu.rs  cpu_temp.rs  disk.rs  loadavg.rs  memory.rs  mod.rs  network.rs
